@startuml domain
hide empty members

namespace common.repository {
  interface IRepository
}

namespace common.entity {
  class Base
}

namespace domain.video {

  class AssetManager <<aggregation>> {
    addCreator()
    findCreatorById()
    findCreatorByEmail()
    ..
    addVideo()
    findVideoById()
    findPublishVideos()
    findVideosByCreatorId()
  }

  class Video <<entity>> {
    id
    title
    description
    publishedAt
    isPublished
    videoUrl
    createdAt
    updatedAt

    update()
    publish()
    unpublish()
    like()
  }

  class Like <<entity>> {
    id
    createdAt
  }

  class Follow <<entity>> {
    id
    createdAt
  }

  class Creator <<entity>> {
    id
    name
    email
    createdAt
    updatedAt

    follow()
    unfollow()
  }


  AssetManager ..> Video
  AssetManager ..> Like
  Video "*"--> Creator
  Like "*" ---> "likedBy" Creator
  Like "*" ---> "likes" Video

  Follow "0..*" -->  "follower" Creator
  Follow "0..*" --> "following" Creator
}

namespace domain.auth {

  enum CredentialType {
    PASSWORD
    TOTP
  }

  class SessionToken <<value_object>> {
    accessToken
    refreshToken
    expiredAt
  }

  class Auth <<aggregation>> {
    - privateKey

    + addCredential()
    + authenticate()
    + tokenRefresh()
    - generateJWT()
    - findCredentialByUserId()
  }

  interface User {
    id
    email
  }

  class Credential <<entity>> {
    id
    credentialType: CredentialType
    credentialValue

    verify()
  }

  Auth ..> User
  Auth ..> Credential
  Credential --> User
}

namespace domain.video.repository {
  interface IVideoRepository
  interface ICreatorRepository
  interface ILikeRepository
  interface IFollowRepository
}

namespace domain.auth.repository {
  interface ICredentialRepository
}

domain.video.Creator ...|> domain.auth.User

domain.video ..|> common.entity
domain.auth ..|> common.entity

domain.video.repository ...|> common.repository
domain.auth.repository ..|> common.repository
@enduml
